--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-attrs==23.1.0
-certifi==2023.7.22
+attrs==23.2.0
+certifi==2024.7.4
 h11==0.14.0
-idna==3.4
+idna==3.7
 outcome==1.3.0.post0
 PySocks==1.7.1
-selenium==4.15.2
-sniffio==1.3.0
+selenium==4.22.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
-trio==0.23.1
+trio==0.26.0
 trio-websocket==0.11.1
-urllib3==2.1.0
+typing_extensions==4.12.2
+urllib3==2.2.2
+websocket-client==1.8.0
 wsproto==1.2.0
